# menu-extractor

./: .env.example  .gitignore  README.md  core.py  logger.py  main.py  models.py  pyproject.toml  settings.py  utils.py
