[project]
name = "menu-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Tyler",email = "jacktyler2391@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "anthropic (>=0.105.2,<0.106.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
